--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 *{
     margin: 0px;
     list-style: none;
+    font-family: 'Oswald', sans-serif;
+    color: #343d46;
 }
 nav{
     margin: 10px;
@@ -18,8 +20,13 @@ nav{
 h1{
     width : 100%;
     text-align: left;
-    font-size: 20px;
+    font-size: 25px;
     margin-left: 10px;
+}
+h2{
+    
+    text-align: center;
+    font-size: 50px;
 }
 .category{
     position:relative;
@@ -32,24 +39,19 @@ h1{
     position: absolute;
     z-index: -1;
     object-fit: cover;
-    opacity: 0.7;
+    opacity: 0.72;
 }
 
-.contact2{
+.contact{
     display: flex;
-    background-color: grey;
+    background-color: #E6E6E6;
     justify-content: space-around;
     height: 40px;
     padding: 0;   
     align-items: center;
-    opacity: 0.7;
 }
 
-.reseau{
-    width: 15px;
-    height: 15px;
-}
-
-p{
-    color: black;
+.reseaux{
+    width: 30px;
+    height: 30px;
 }
