--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+html {
+    box-sizing: border-box;
+  }
+  *, *:before, *:after {
+    box-sizing: inherit;
+    }
+
 *{
     margin: 0px;
     list-style: none;
@@ -21,7 +28,6 @@ h1{
     width : 100%;
     text-align: left;
     font-size: 25px;
-    margin-left: 10px;
 }
 h2{
     
