--- a/ecosysteme.css
+++ b/ecosysteme.css
@@ -9,11 +9,21 @@
   }
   *, *:before, *:after {
     box-sizing: inherit;
+    margin: 0px;
+    list-style: none;
+    font-family: 'Oswald', sans-serif;
+    color: #343d46;
     }
   
 
 
 /* header */
+
+h1{
+    width : 100%;
+    text-align: left;
+    font-size: 25px;
+}
 
 nav{
     margin: 10px;
@@ -61,19 +71,19 @@ article img{
 }
 
 /* footer */ 
-.contact2{
+.contact{
     display: flex;
-    background-color: grey;
+    background-color: #E6E6E6;
     justify-content: space-around;
     height: 40px;
-    padding: 0;
+    padding: 0;   
     align-items: center;
- }
- .reseau{
-    width: 15px;
-    height: 15px;
- }
- 
+}
+
+.reseaux{
+    width: 30px;
+    height: 30px;
+}
 
 
 
