--- a/ecosysteme.css
+++ b/ecosysteme.css
@@ -107,6 +107,7 @@ article img{
 
     nav{
         display: block;
+        margin-top: 300px;
     }
 
     .desktop_title{
@@ -114,24 +115,12 @@ article img{
     }
 
     .logo{
-        margin: 10px;
-        display: flex;
-        height: 70%;
-        width : 50%;
+        display: none;
      }
 
      h1{
-         display: flex;
-         align-items: center;
+        display: none;
      }
-
-
-    header img {
-        display: flex;
-        width: 100%;
-        margin: 0px;
-        text-align: center;
-    }
 
 
 
@@ -140,6 +129,10 @@ article img{
         text-decoration: none;
         color:#35D2DD;
         padding: 20px;
+    }
+
+    .logo_desktop{
+        display: none;
     }
 
     .navbar a:hover {
@@ -154,6 +147,7 @@ article img{
         position: absolute;
         z-index: -1;
         object-fit: cover;
+        height: 300px;
     }
 
     ul {
