add burger menu

--- a/ecosysteme.css
+++ b/ecosysteme.css
@@ -19,27 +19,56 @@
 
 /* header */
 
-h1{
-    width : 100%;
-    font-size: 15px;
-    display: flex;
-    align-items: center;
-}
-
-nav{
-    display: none;
- }
-
- .desktop_title {
+.desktop_title {
     display: flex;
     background: #E6E6E6;
 }
+
+header{
+    display: flex;
+    height: 60px;
+    background: #E6E6E6;
+}
+.nav__list{
+    display: none;
+}
+.nav__burger img{
+    height: 50px;
+    width: 50px;
+}
+.nav__list--active{
+    display: block;
+    position: absolute;
+    width: 100%;
+    left: 0;
+    background: #E6E6E6;
+    z-index: 1;
+    top: 60px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+nav{
+    display: flex;
+    align-items: center;
+}
+.nav__burger{
+    background: #E6E6E6;
+}
+
 
 .logo{
     display: flex;
     height: 100%;
     width: 30%;
     padding: 10px;
+}
+
+h1{
+    width : 100%;
+    font-size: 15px;
+    display: flex;
+    align-items: center;
 }
 
 .headerbackground{
@@ -98,6 +127,13 @@ article img{
 
 
 @media screen and (min-width: 700px) {
+    header{
+        height: 100%;
+    }
+    .nav__burger{
+        display: none;
+    }
+
     .bloc_article{
         display: flex;
         font-family: 'Oswald', sans-serif;
@@ -113,9 +149,18 @@ article img{
         flex-direction: column;
     }
 
-    nav{
+    .navbar{
+        width: 100%;
+    }
+    .nav__list{
         display: block;
         margin-top: 300px;
+        list-style-type: none;
+        display: flex;
+        width: 100%;
+        justify-content: space-around;
+        background-color:  #293133;
+        font-weight: bold;
     }
 
     .desktop_title{
@@ -153,7 +198,7 @@ article img{
         display: block;
         width: 100%;
         position: absolute;
-        z-index: -1;
+        z-index: 0;
         object-fit: cover;
         height: 300px;
     }
@@ -169,6 +214,10 @@ article img{
     }
     .contact{
         height: 100px;
+    }
+
+    hr{
+        display: none;
     }
 
 
