--- a/style.css
+++ b/style.css
@@ -15,11 +15,39 @@ html {
     display: flex;
     background: #E6E6E6;
 }
-nav{
-    margin: 10px;
-    display: none;
-    
+
+header{
+    display: flex;
+    height: 60px;
+    background: #E6E6E6;
 }
+.nav__list{
+    display: none;
+}
+.nav__burger img{
+    height: 50px;
+    width: 50px;
+}
+.nav__list--active{
+    display: block;
+    position: absolute;
+    width: 100%;
+    left: 0;
+    background: #E6E6E6;
+    z-index: 1;
+    top: 60px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+nav{
+    display: flex;
+    align-items: center;
+}
+.nav__burger{
+    background: #E6E6E6;
+}
+
 
 .logo{
     display: flex;
@@ -81,6 +109,18 @@ article{
 }
 
 @media screen and (min-width: 700px){
+
+    .nav__burger{
+        display: none;
+    }
+    
+    header{
+        height: 100%;
+    }
+
+    .logo{
+        width: 40%;
+    }
 
     .bloc_article{
         display: flex;
