--- a/numerique.css
+++ b/numerique.css
@@ -157,6 +157,13 @@ article img{
         flex-direction: column;
     }
 
+    article img{
+        width: 200px;
+        height: 200px;
+        margin-left: 20%;
+        margin-right: 20%;
+    }
+
     .navbar{
         width: 100%;
     }
