--- a/contacts.css
+++ b/contacts.css
@@ -67,6 +67,7 @@ select, input, textarea {
 
 .dispo{
     display: flex;
+    flex-direction: column;
     padding-top : 5px;
     padding-bottom: 10px;
     padding-left: 5px;
@@ -97,4 +98,32 @@ select, input, textarea {
     height: 30px;
 }
 
+.infos {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+    margin: 15px;
+    border: 1px solid #E50044;
+    border-radius: 20px;
+    
+    
+}
 
+.map {
+    height: 100%;
+    width: 100%;
+    border-radius: 20px;
+    
+}
+
+.adress,.phone {
+    display: none;
+}
+
+@media screen and (min-width: 701px) {
+    .adress,.phone {
+        display: flex;
+        justify-content: center;
+    }
+}
