--- a/style.css
+++ b/style.css
@@ -112,6 +112,10 @@ article{
 }
 
 @media screen and (min-width: 700px){
+    html{
+        height: 1080px;
+        padding: 0;
+    }
 
     .nav__burger{
         display: none;
@@ -119,10 +123,32 @@ article{
     
     header{
         height: 100%;
+        display: flex;
+        flex-direction: column;
     }
 
     .logo{
         width: 40%;
+    }
+
+  
+    .navbar{
+        width: 100%;
+    }
+    .nav__list{
+        display: block;
+        list-style-type: none;
+        display: flex;
+        width: 100%;
+        justify-content: space-around;
+        background-color:  #293133;
+        font-weight: bold;
+    }
+    nav a{
+        display: flex;
+        text-decoration: none;
+        color:#35D2DD;
+        padding: 20px;
     }
 
     .bloc_article{
@@ -144,7 +170,7 @@ article{
 
     .category2{
         width: 50%;
-        height: 505px;
+        height: 755px;
         margin-top: 5px;
         margin-right: 5px;
     }
@@ -152,10 +178,11 @@ article{
     .category{
         margin-top: 5px;
         margin-bottom: 0px;
+        height: 375px;
     }
 
     .contact{
-        height: 100px;
+        height: 120px;
         background-color:  #293133;
         font-weight: bold;
     }
@@ -168,6 +195,10 @@ article{
     .reseaux{
         width: 60px;
         height: 60px;
+    }
+
+    footer{
+        height: 100%;
     }
 
 }
