--- a/economie.css
+++ b/economie.css
@@ -55,7 +55,9 @@ nav{
 .nav__burger{
     background: #E6E6E6;
 }
-
+a{
+    text-decoration: none;
+}
 
 .logo{
     display: flex;
@@ -233,7 +235,7 @@ article img{
         font-weight: bold;
     }
 
-    .contact li{
+    .contact a{
         color: #35D2DD;
         font-size: 30px;
     }
