--- a/economie.css
+++ b/economie.css
@@ -155,10 +155,12 @@ article img{
     }
 
     article img{
-        width: 200px;
-        height: 200px;
+        width: 20vh;
+        height: 20vh;
         margin-left: 20%;
         margin-right: 20%;
+        margin-bottom: 10%;
+        margin-top: 10%;
     }
 
     .inverse{
@@ -171,7 +173,7 @@ article img{
     }
     .nav__list{
         display: block;
-        margin-top: 300px;
+        margin-top: 30vh;
         list-style-type: none;
         display: flex;
         width: 100%;
@@ -217,7 +219,11 @@ article img{
         position: absolute;
         z-index: 0;
         object-fit: cover;
-        height: 300px;
+        height: 30vh;
+    }
+
+    .contenu_article{
+        height: 20vh;
     }
 
     ul {
@@ -230,7 +236,7 @@ article img{
         padding: 0px;
     }
     .contact{
-        height: 100px;
+        height: 15vh;
         background-color:  #293133;
         font-weight: bold;
     }
