--- a/lavie.css
+++ b/lavie.css
@@ -151,6 +151,9 @@ article img{
         padding-bottom: 10px;
     }
 
+    .contenu_article{
+        height: 20vh;
+    }
     article{
         display: flex;
         flex-direction: column;
@@ -166,7 +169,7 @@ article img{
     }
     .nav__list{
         display: block;
-        margin-top: 300px;
+        margin-top: 30vh;
         list-style-type: none;
         display: flex;
         width: 100%;
@@ -207,10 +210,12 @@ article img{
     }
 
     article img{
-        width: 200px;
-        height: 200px;
+        width: 20vh;
+        height: 20vh;
         margin-left: 20%;
         margin-right: 20%;
+        margin-bottom: 10%;
+        margin-top: 10%;
     }
 
     .headerbackground{
@@ -219,7 +224,7 @@ article img{
         position: absolute;
         z-index: 0;
         object-fit: cover;
-        height: 300px;
+        height: 30vh;
     }
 
     ul {
@@ -232,7 +237,7 @@ article img{
         padding: 0px;
     }
     .contact{
-        height: 100px;
+        height: 15vh;
         background-color:  #293133;
         font-weight: bold;
     }
@@ -251,7 +256,7 @@ article img{
         display: none;
     }
 
-
+    
 }
 
 
