--- a/accueil.css
+++ b/accueil.css
@@ -113,7 +113,7 @@ article{
 
 @media screen and (min-width: 700px){
     html{
-        height: 1080px;
+       
         padding: 0;
     }
 
@@ -122,7 +122,7 @@ article{
     }
     
     header{
-        height: 100%;
+        height: 90%;
         display: flex;
         flex-direction: column;
     }
@@ -135,6 +135,13 @@ article{
     .navbar{
         width: 100%;
     }
+
+    .navbar a:hover {
+        background-color: #35D2DD;
+        text-decoration: underline;
+        color: #293133;
+    }
+    
     .nav__list{
         display: block;
         list-style-type: none;
@@ -170,7 +177,7 @@ article{
 
     .category2{
         width: 50%;
-        height: 755px;
+        height: 99vh;
         margin-top: 5px;
         margin-right: 5px;
     }
@@ -178,11 +185,11 @@ article{
     .category{
         margin-top: 5px;
         margin-bottom: 0px;
-        height: 375px;
+        height: 49vh;
     }
 
     .contact{
-        height: 120px;
+        height: 15vh;
         background-color:  #293133;
         font-weight: bold;
     }
@@ -197,9 +204,7 @@ article{
         height: 60px;
     }
 
-    footer{
-        height: 100%;
-    }
+   
 
   
 
