--- a/contacts.css
+++ b/contacts.css
@@ -78,7 +78,7 @@ form h2{
     border-top: 40px solid #E6E6E6;
 }
 
-select, input, textarea {
+select, input, textarea, button {
     display: block;
     margin-left: auto;
     margin-right: auto;
